<resources>
    <string name="app_name">Calculator</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="clear_entire">C</string>
    <string name="delete">Del</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="language">Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate us</string>
    <string name="other_function">Other function</string>
    <string name="rate_question">How do you fell about this app?</string>
    <string name="tell_us_in_a_comment">Tell us in a comment!</string>
    <string name="terrible">Terrible</string>
    <string name="bad">bad</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="thanks_for_rate">Thanks for rate</string>
    <string name="we_will_do_our_best">We will do our best!</string>
    <string name="please_select_rating">Please select a rating</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="apply">Apply</string>
    <string name="selected">Selected</string>
    <string name="can_not_divide_by_zero">Can not divide by zero</string>
    <string name="error_format">Format error</string>
    <string name="shop">Shop</string>
    <string name="purchase">Purchase</string>
    <string name="insufficient_gold">Insufficient gold</string>
</resources>