<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/other_function"
        android:icon="@drawable/other_function"
        android:title="@string/other_function" />
    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/language"
        android:title="@string/language" />
    <item
        android:id="@+id/nav_change_theme"
        android:icon="@drawable/change_theme"
        android:title="@string/change_theme" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/nav_rate_us"
        android:icon="@drawable/rate_us"
        android:title="@string/rate" />
</menu>