<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            tools:context=".screen.MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/Output"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:background="@color/background_color"
                    android:ems="10"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textIsSelectable="true"
                    android:textSize="55sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_background"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="NotSibling">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_clear"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/clear_entire"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_del"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_div"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="/"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_percentage"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_del"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_del"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/delete"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_div"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_clear"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_7"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_7"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_8"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_8"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_8"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_9"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_7"
                        app:layout_constraintTop_toTopOf="@+id/btn_7" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_9"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_9"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_mul"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_8"
                        app:layout_constraintTop_toTopOf="@+id/btn_8" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_mul"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_operator_background"
                        android:text="x"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_9"
                        app:layout_constraintTop_toTopOf="@+id/btn_9"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_4"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_4"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_5"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_5"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_6"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_4"
                        app:layout_constraintTop_toTopOf="@+id/btn_4" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_6"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_6"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_5"
                        app:layout_constraintTop_toTopOf="@+id/btn_5" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_minus"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_operator_background"
                        android:text="-"
                        android:textSize="30sp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_6"
                        app:layout_constraintTop_toTopOf="@+id/btn_6"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_1"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_1"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_2"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_2"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_1"
                        app:layout_constraintTop_toTopOf="@+id/btn_1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_3"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_add"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_2"
                        app:layout_constraintTop_toTopOf="@+id/btn_2" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_add"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_operator_background"
                        android:text="+"
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btn_3"
                        app:layout_constraintTop_toTopOf="@+id/btn_3"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_0"
                        android:layout_width="0dp"
                        android:layout_height="95dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_0"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_decimal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_decimal"
                        android:layout_width="0dp"
                        android:layout_height="95dp"
                        android:background="@drawable/button_number_background"
                        android:text="@string/_dot"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/btn_3"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/btn_3"
                        app:layout_constraintTop_toTopOf="@+id/btn_0"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_result"
                        android:layout_width="0dp"
                        android:layout_height="95dp"
                        android:background="@drawable/button_operator_background"
                        android:text="="
                        android:gravity="center"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/btn_add"
                        app:layout_constraintTop_toTopOf="@+id/btn_decimal"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_percentage"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:background="@drawable/button_operator_background"
                        android:text="%"
                        android:textSize="25sp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_div"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/navigationViewBackground"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>